tests/compilation/examples/no_try/fail_error.stderr
error: failed
 --> tests/compilation/examples/fail_error.rs:3:1
  |
3 | #[error_no_help]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `error_no_help` (in Nightly builds, run with -Z macro-backtrace for more info)
